fix size, alignment of cards

--- a/src/components/ProfileCard.css
+++ b/src/components/ProfileCard.css
@@ -4,21 +4,21 @@
 
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    width: 300px;
-    height: 500px;
+    border-radius: .5rem;
+    border: .1rem solid lightgray;
+    box-shadow: 0 0 1rem 0 rgba(black, .05);
+    width: 100%;
+    height: 600px;
     margin: auto;
     text-align: center;
 }
 
 .title {
+    float: left;
+    width:100%;
     color: grey;
-    font-size: 18px;
 }
 
-.flex-container_card {
-  display: flex;
-  flex-wrap: nowrap;
-}
 
 .edit {
   background-color: #e7e7e7;
